{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 153,
  "lineage": "30c74d4f-2fa1-7e29-a8e9-9b3b337d4c52",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0556194c2ababe7f3",
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_igw"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0556194c2ababe7f3",
            "id": "r-rtb-03e68604f6e17f95b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e68604f6e17f95b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e68604f6e17f95b",
            "owner_id": "864419182307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0556194c2ababe7f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "istox_igw"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb52408b0107555e",
            "route_table_id": "rtb-03e68604f6e17f95b",
            "subnet_id": "subnet-0e997aecb7397fa2f"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0839b06be6b48c75f",
            "route_table_id": "rtb-03e68604f6e17f95b",
            "subnet_id": "subnet-022830a78c368afeb"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a10e79c1a7293d82",
            "route_table_id": "rtb-03e68604f6e17f95b",
            "subnet_id": "subnet-047f7e256d339ecd0"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:security-group/sg-03340dd0264885970",
            "description": "istox default private SG",
            "egress": [],
            "id": "sg-03340dd0264885970",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.32.0/20",
                  "10.0.96.0/20",
                  "10.0.160.0/20"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "istox_default_private_sg",
            "name_prefix": null,
            "owner_id": "864419182307",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:security-group/sg-092c2e0d28ba39017",
            "description": "istox default public SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092c2e0d28ba39017",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "128.199.253.143/32"
                ],
                "description": "VPN IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "istox_default_public_sg",
            "name_prefix": null,
            "owner_id": "864419182307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "istox_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.32.0/20",
              "10.0.96.0/20",
              "10.0.160.0/20"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2698449560",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03340dd0264885970",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.network.aws_security_group.default_private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:subnet/subnet-093c76e2577fdd1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-093c76e2577fdd1e3",
            "map_public_ip_on_launch": false,
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_private_0"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:subnet/subnet-0ac17dabf4532d0e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-0ac17dabf4532d0e7",
            "map_public_ip_on_launch": false,
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_private_1"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:subnet/subnet-0cc897867b21374bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-0cc897867b21374bc",
            "map_public_ip_on_launch": false,
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_private_2"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:subnet/subnet-0e997aecb7397fa2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0e997aecb7397fa2f",
            "map_public_ip_on_launch": true,
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_public_0"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:subnet/subnet-022830a78c368afeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.96.0/20",
            "id": "subnet-022830a78c368afeb",
            "map_public_ip_on_launch": true,
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_public_1"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:subnet/subnet-047f7e256d339ecd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-047f7e256d339ecd0",
            "map_public_ip_on_launch": true,
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_public_2"
            },
            "vpc_id": "vpc-0dec7d6c56c6acf9c"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:864419182307:vpc/vpc-0dec7d6c56c6acf9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f198b1404914858",
            "default_route_table_id": "rtb-0dcde656f893e8fd2",
            "default_security_group_id": "sg-06499f1edbc4e1663",
            "dhcp_options_id": "dopt-33f2e654",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dec7d6c56c6acf9c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dcde656f893e8fd2",
            "owner_id": "864419182307",
            "tags": {
              "Name": "istox_vpc"
            }
          }
        }
      ]
    }
  ]
}